# game_of_life_cpp

./: .gitignore  CMakeLists.txt  README.md  in.txt  invalid_pattern.rle
patterns/: gosper_glider_gun.rle  invalid_header.rle
src/: CMakeLists.txt  life.cc  life_prototype.cc  main.cc  matrix.h  state.cc  state.h  t_display.cc  t_display.h  temp.cc
test/: CMakeLists.txt  matrix_test.cc  state_test.cc
